develop contact page

--- a/about.html
+++ b/about.html
@@ -17,13 +17,13 @@
 
 <body>
     <nav>
-        <div class="nav-top">
+        <div id="top" class="nav-top">
             <ul class="nav-list">
                 <li><a href="#"> Cart</a></li>
                 <li><a href="#">Checkout</a></li>
                 <li><a href="#">Shop</a></li>
             </ul>
-            <div class="contact">
+            <div class="top-contact">
                 <p><i class="fa-solid fa-location-dot"></i> USA</p>
                 <P><i class="fa-solid fa-phone"></i>321-345-7796</P>
                 <P><i class="fa-solid fa-envelope"></i>admin@yourhealthychoicellc.com</P>
@@ -46,118 +46,120 @@
             </div>
 
         </div>
-
-        <section>
-            <div class="about-area">
-                <h2 class="about-head">About us</h2>
-                <div class="about">
-                    <div class="about-info">
-                        <div class="about-info1">
-                            <h2>YOUR HEALTHY CHOICE VENDING LLC ABOUT US</h2>
-                            <p> Your Healthy Choice Vending is a growing company that is working hard to provide healthy snacks and drinks that are easily approachable through our fast shipping and vending services.<br><br> We offer convenience and fast accessibility
-                                for anyone who loves to grab a quick and healthy snack. Your Healthy Choice offers only those food products that are wholly nutritious, with multiple health benefits. So, it can be easy for you to grab your favorite and
-                                delicious snacks and fresh juices on the go. <br><br> We aim to provide our services all across the nation so that the demands of both businesses and individuals aka Health fanatics could be fulfilled.</p>
-                        </div>
-                        <div class="about-info2">
-                            <h2>Grab a Healthy Snack Whenever You Want</h2>
-                            <p> Your Healthy Choice understands the importance of healthy food, which therefore leads to a healthy lifestyle. We value our customers, that’s why we offer the best healthy options that are delivered right on your doorstep the
-                                very next day. Our vending service is also a great option so that you can grab your favorite snacks whenever you want.</p>
-                        </div>
-                        <div class="about-info3">
-                            <h2>There’s No Excuse to Eating Healthy</h2>
-                            <p> Do you work in an office with a hectic 9 to 5 routine? If yes, then you would love our healthy selection of foods like non-dairy products, energy bars, sugar-free cookies, and much more! Need some energy to boost you up? Your
-                                Healthy Choice vending offers a variety of energy drinks that are perfect to grab on the go and boost your energy level. Went on a quick run? Or are you returning from the gym? Nothing beats water to quench the thirst you
-                                feel after running or doing your workout session. We can imagine how a body drenched in sweat would feel to find a fresh and healthy selection of drinks in Your Healthy Choice Vending.</p>
-                        </div>
-                        <div class="about-info4">
-                            <h2>Ideal Snacks for Your Busy Lifestyle</h2>
-                            <p> Your Healthy Choice Vending understands how busy life is these days. Days are passing in the blink of an eye. That’s why fast solutions are required for unexpected cravings. Our Healthy snacks are carefully selected for your
-                                wellbeing and taste. Thus, Your Healthy Choice Vending offers the best snacks for your busy lifestyle that will boost your immunity so that your body can be strong enough to fight any disease or virus.</p>
-                        </div>
-                        <div class="about-info5">
-                            <h2>Our Mission</h2>
-                            <p>Your Healthy Lifestyle Vending is on a mission to make snacking convenient and healthy for everyone. Our Top most priority is our dear customers, so we deliver the best food products and provide affordable vending services.
-                                We want people to adapt to a healthy lifestyle by taking small steps, such as ordering a healthy bunch of products from us that will be delivered right to your doorstep.</p>
-                        </div>
-                        <div class="about-info6">
-                            <h2>Our Vision</h2>
-                            <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy
-                                world through nutritious food and healthy drinks.</p>
+    </nav>
+    <section>
+        <div class="about-area">
+            <h2 class="about-head">About us</h2>
+            <div class="about">
+                <div class="about-info">
+                    <div class="about-info1">
+                        <h2>YOUR HEALTHY CHOICE VENDING LLC ABOUT US</h2>
+                        <p> Your Healthy Choice Vending is a growing company that is working hard to provide healthy snacks and drinks that are easily approachable through our fast shipping and vending services.<br><br> We offer convenience and fast accessibility
+                            for anyone who loves to grab a quick and healthy snack. Your Healthy Choice offers only those food products that are wholly nutritious, with multiple health benefits. So, it can be easy for you to grab your favorite and delicious
+                            snacks and fresh juices on the go. <br><br> We aim to provide our services all across the nation so that the demands of both businesses and individuals aka Health fanatics could be fulfilled.</p>
+                    </div>
+                    <div class="about-info2">
+                        <h2>Grab a Healthy Snack Whenever You Want</h2>
+                        <p> Your Healthy Choice understands the importance of healthy food, which therefore leads to a healthy lifestyle. We value our customers, that’s why we offer the best healthy options that are delivered right on your doorstep the very
+                            next day. Our vending service is also a great option so that you can grab your favorite snacks whenever you want.</p>
+                    </div>
+                    <div class="about-info3">
+                        <h2>There’s No Excuse to Eating Healthy</h2>
+                        <p> Do you work in an office with a hectic 9 to 5 routine? If yes, then you would love our healthy selection of foods like non-dairy products, energy bars, sugar-free cookies, and much more! Need some energy to boost you up? Your Healthy
+                            Choice vending offers a variety of energy drinks that are perfect to grab on the go and boost your energy level. Went on a quick run? Or are you returning from the gym? Nothing beats water to quench the thirst you feel after
+                            running or doing your workout session. We can imagine how a body drenched in sweat would feel to find a fresh and healthy selection of drinks in Your Healthy Choice Vending.</p>
+                    </div>
+                    <div class="about-info4">
+                        <h2>Ideal Snacks for Your Busy Lifestyle</h2>
+                        <p> Your Healthy Choice Vending understands how busy life is these days. Days are passing in the blink of an eye. That’s why fast solutions are required for unexpected cravings. Our Healthy snacks are carefully selected for your wellbeing
+                            and taste. Thus, Your Healthy Choice Vending offers the best snacks for your busy lifestyle that will boost your immunity so that your body can be strong enough to fight any disease or virus.</p>
+                    </div>
+                    <div class="about-info5">
+                        <h2>Our Mission</h2>
+                        <p>Your Healthy Lifestyle Vending is on a mission to make snacking convenient and healthy for everyone. Our Top most priority is our dear customers, so we deliver the best food products and provide affordable vending services. We
+                            want people to adapt to a healthy lifestyle by taking small steps, such as ordering a healthy bunch of products from us that will be delivered right to your doorstep.</p>
+                    </div>
+                    <div class="about-info6">
+                        <h2>Our Vision</h2>
+                        <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world
+                            through nutritious food and healthy drinks.</p>
+                    </div>
+                </div>
+                <section>
+                    <div>
+                        <div class="about-search">
+                            <input class="abt-search" type="text" name="search" placeholder="search...." />
+                            <span><button>SEARCH</button></span>
                         </div>
                     </div>
-                    <section>
-                        <div>
-                            <div class="about-search">
-                                <input class="abt-search" type="text" name="search" placeholder="search...." />
-                                <span><button>SEARCH</button></span>
-                            </div>
+                    <div class="about-adds">
+                        <div class="about-add-info">
+                            <img src="../assets/image/product1.jpg" alt="product img" />
+                            <h4>MILK THISTLE</h4>
+                            <button>Read More</button>
                         </div>
-                        <div class="about-adds">
-                            <div class="about-add-info">
-                                <img src="../assets/image/product1.jpg" alt="product img" />
-                                <h4>MILK THISTLE</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice6.jpg" alt="product img" />
-                                <h4>MIRACLE REDS</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice1.jpg" alt="product img" />
-                                <h4>BIO STEEL SPORTS DRINK</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice2.jpg" alt="product img" />
-                                <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice3.jpg" alt="product img" />
-                                <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/thumbnail-4.jpg" alt="product img" />
-                                <h4>THE COMPLETE CRUNCHY COOKIES</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product2.jpg" alt="product img" />
-                                <h4>Plant-Based Protein</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice4.jpg" alt="product img" />
-                                <h4>AQUAHYDRATE 4X1 GALLON</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product3.jpg" alt="product img" />
-                                <h4>NATURES PLANT PROTEIN</h4>
-                                <button>Read More</button>
-                            </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice6.jpg" alt="product img" />
+                            <h4>MIRACLE REDS</h4>
+                            <button>Read More</button>
                         </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice1.jpg" alt="product img" />
+                            <h4>BIO STEEL SPORTS DRINK</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice2.jpg" alt="product img" />
+                            <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice3.jpg" alt="product img" />
+                            <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/thumbnail-4.jpg" alt="product img" />
+                            <h4>THE COMPLETE CRUNCHY COOKIES</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product2.jpg" alt="product img" />
+                            <h4>Plant-Based Protein</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice4.jpg" alt="product img" />
+                            <h4>AQUAHYDRATE 4X1 GALLON</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product3.jpg" alt="product img" />
+                            <h4>NATURES PLANT PROTEIN</h4>
+                            <button>Read More</button>
+                        </div>
+                    </div>
 
-                    </section>
-                </div>
-
+                </section>
             </div>
 
-        </section>
+        </div>
 
-        <!--footer area-->
-        <footer>
-            <div class="foot-area">
-                <div class="foot-info-1">
-                    <h3>Your Healthy Choice Vending LLC</h3>
-                    <img src="../assets/image/logo.jpg" />
-                    <div><button>Shop Online</button></div>
-                </div>
-                <div class="foot-info-2">
-                    <h3>Follow Us</h3>
-                    <span class="icons"><i class="fa-brands fa-facebook"></i>
+    </section>
+    <div id="toTop" class="to-top">
+        <a href="#top">&#8963;</a>
+    </div>
+    <!--footer area-->
+    <footer>
+        <div class="foot-area">
+            <div class="foot-info-1">
+                <h3>Your Healthy Choice Vending LLC</h3>
+                <img src="../assets/image/logo.jpg" />
+                <div><button>Shop Online</button></div>
+            </div>
+            <div class="foot-info-2">
+                <h3>Follow Us</h3>
+                <span class="icons"><i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-whatsapp"></i>
@@ -165,21 +167,21 @@
                     <i class="fa-solid fa-phone-flip"></i>
                 </span>
 
-                    <p>Follow Us Owned and operated by US Veteran</p>
+                <p>Follow Us Owned and operated by US Veteran</p>
 
-                </div>
-                <div class="foot-info-3">
-                    <h3>Our Vision</h3>
-                    <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world
-                        through nutritious food and healthy drinks.</p>
-                </div>
             </div>
-            <hr>
-            <div class="foot-bottom">
-                <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+            <div class="foot-info-3">
+                <h3>Our Vision</h3>
+                <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world through
+                    nutritious food and healthy drinks.</p>
             </div>
-        </footer>
-        <script src="./js/main.js"></script>
+        </div>
+        <hr>
+        <div class="foot-bottom">
+            <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+        </div>
+    </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
