--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,13 @@
 
 <body>
     <nav>
-        <div class="nav-top">
+        <div id="top" class="nav-top">
             <ul class="nav-list">
                 <li><a href="#"> Cart</a></li>
                 <li><a href="#">Checkout</a></li>
                 <li><a href="#">Shop</a></li>
             </ul>
-            <div class="contact">
+            <div class="top-contact">
                 <p><i class="fa-solid fa-location-dot"></i> USA</p>
                 <P><i class="fa-solid fa-phone"></i>321-345-7796</P>
                 <P><i class="fa-solid fa-envelope"></i>admin@yourhealthychoicellc.com</P>
@@ -46,19 +46,115 @@
             </div>
 
         </div>
-
-
-        <!--footer area-->
-        <footer>
-            <div class="foot-area">
-                <div class="foot-info-1">
-                    <h3>Your Healthy Choice Vending LLC</h3>
-                    <img src="../assets/image/logo.jpg" />
-                    <div><button>Shop Online</button></div>
+    </nav>
+    <div class="contact-page">
+        <section>
+            <div>
+                <div class="con-head">
+                    <h3>Contact</h3>
                 </div>
-                <div class="foot-info-2">
-                    <h3>Follow Us</h3>
-                    <span class="icons"><i class="fa-brands fa-facebook"></i>
+                <div class="contact-info">
+                    <div class="con-info">
+                        <p><i class="fas fa-phone"></i> 321-345-7796</p>
+                        <p><i class="fa fa-envelope" aria-hidden="true"></i> admin@yourhealthychoicellc.com</p>
+                    </div>
+                    <div class="con-message">
+                        <label for="name">Your name</label><br>
+                        <input id="con-input" type="text" name="name"><br>
+
+                        <label for="email">Your email</label><br>
+                        <input id="con-input" type="text" name="email"><br>
+
+                        <label for="subject">Subject</label><br>
+                        <input id="con-input" type="text" name="subject"><br>
+
+                        <label for="message">Your message (optional)</label><br>
+                        <textarea id="con-mas" name="message" rows="13" cols="50"></textarea><br>
+
+                        <button type="submit">Submit</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="contact-side-bar">
+                <div>
+                    <div class="about-search">
+                        <input class="abt-search" type="text" name="search" placeholder="search...." />
+                        <span><button>SEARCH</button></span>
+                    </div>
+                </div>
+                <div class="about-adds">
+                    <div class="about-add-info">
+                        <img src="../assets/image/product1.jpg" alt="product img" />
+                        <h4>MILK THISTLE</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product juice6.jpg" alt="product img" />
+                        <h4>MIRACLE REDS</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product juice1.jpg" alt="product img" />
+                        <h4>BIO STEEL SPORTS DRINK</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product juice2.jpg" alt="product img" />
+                        <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product juice3.jpg" alt="product img" />
+                        <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/thumbnail-4.jpg" alt="product img" />
+                        <h4>THE COMPLETE CRUNCHY COOKIES</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product2.jpg" alt="product img" />
+                        <h4>Plant-Based Protein</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product juice4.jpg" alt="product img" />
+                        <h4>AQUAHYDRATE 4X1 GALLON</h4>
+                        <button>Read More</button>
+                    </div>
+                    <div class="about-add-info">
+                        <img src="../assets/image/product3.jpg" alt="product img" />
+                        <h4>NATURES PLANT PROTEIN</h4>
+                        <button>Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+    </div>
+
+    <div id="toTop" class="to-top">
+        <a href="#top">&#8963;</a>
+    </div>
+    <!--footer area-->
+    <footer>
+        <div class="foot-area">
+            <div class="foot-info-1">
+                <h3>Your Healthy Choice Vending LLC</h3>
+                <img src="../assets/image/logo.jpg" />
+                <div><button>Shop Online</button></div>
+            </div>
+            <div class="foot-info-2">
+                <h3>Follow Us</h3>
+                <span class="icons"><i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-whatsapp"></i>
@@ -66,21 +162,21 @@
                     <i class="fa-solid fa-phone-flip"></i>
                 </span>
 
-                    <p>Follow Us Owned and operated by US Veteran</p>
+                <p>Follow Us Owned and operated by US Veteran</p>
 
-                </div>
-                <div class="foot-info-3">
-                    <h3>Our Vision</h3>
-                    <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world
-                        through nutritious food and healthy drinks.</p>
-                </div>
             </div>
-            <hr>
-            <div class="foot-bottom">
-                <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+            <div class="foot-info-3">
+                <h3>Our Vision</h3>
+                <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world through
+                    nutritious food and healthy drinks.</p>
             </div>
-        </footer>
-        <script src="./js/main.js"></script>
+        </div>
+        <hr>
+        <div class="foot-bottom">
+            <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+        </div>
+    </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
