--- a/login.html
+++ b/login.html
@@ -23,13 +23,13 @@
                 <li><a href="#">Checkout</a></li>
                 <li><a href="#">Shop</a></li>
             </ul>
-            <div class="contact">
+            <div class="top-contact">
                 <p><i class="fa-solid fa-location-dot"></i> USA</p>
                 <P><i class="fa-solid fa-phone"></i>321-345-7796</P>
                 <P><i class="fa-solid fa-envelope"></i>admin@yourhealthychoicellc.com</P>
             </div>
         </div>
-        <div class="navbar-area">
+        <div id="top" class="navbar-area">
             <div class="logo">
                 <img src="../assets/image/logo.jpg" alt="logo" />
             </div>
@@ -46,105 +46,108 @@
             </div>
 
         </div>
-        <section>
-            <div class="order-area">
-                <div class="order-login">
-                    <div class="order-head">
-                        <h3>My account</h3>
-                        <h4>Login</h4>
-                    </div>
-                    <div class="login-chart">
-                        <div class="login-form">
-                            <label for="uname" required><p>Username or email address<span>	&#42;</span></p></label><br>
-                            <input id="username" type="text" name="uname" required><br>
+    </nav>
+    <section>
+        <div class="order-area">
+            <div class="order-login">
+                <div class="order-head">
+                    <h3>My account</h3>
+                    <h4>Login</h4>
+                </div>
+                <div class="login-chart">
+                    <div class="login-form">
+                        <label for="uname" required><p>Username or email address<span>	&#42;</span></p></label><br>
+                        <input id="username" type="text" name="uname" required><br>
 
-                            <label for="psw"><p>Password<span>&#42;</span></p></label><br>
-                            <input id="password" type="password" name="psw" placeholder="&#9673;" required><br>
+                        <label for="psw"><p>Password<span>&#42;</span></p></label><br>
+                        <input id="password" type="password" name="psw" placeholder="&#9673;" required><br>
 
-                            <div class="check-area">
-                                <input type="checkbox" id="checkbox" name="checkbox" value="1">
-                                <label for="checkbox">Remember me</label><br>
-                            </div>
-
-                            <button id="btn" type="submit">Login in</button><br>
-
-                            <a href="#">Lost your password?</a>
+                        <div class="check-area">
+                            <input type="checkbox" id="checkbox" name="checkbox" value="1">
+                            <label for="checkbox">Remember me</label><br>
                         </div>
+
+                        <button id="btn" type="submit">Login in</button><br>
+
+                        <a href="#">Lost your password?</a>
                     </div>
                 </div>
-                <section>
-                    <div class="order-sidebar">
+            </div>
+            <section>
+                <div class="order-sidebar">
 
-                        <div>
-                            <div class="about-search">
-                                <input class="abt-search" type="text" name="search" placeholder="search...." />
-                                <span><button>SEARCH</button></span>
-                            </div>
+                    <div>
+                        <div class="about-search">
+                            <input class="abt-search" type="text" name="search" placeholder="search...." />
+                            <span><button>SEARCH</button></span>
                         </div>
-                        <div class="about-adds">
-                            <div class="about-add-info">
-                                <img src="../assets/image/product1.jpg" alt="product img" />
-                                <h4>MILK THISTLE</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice6.jpg" alt="product img" />
-                                <h4>MIRACLE REDS</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice1.jpg" alt="product img" />
-                                <h4>BIO STEEL SPORTS DRINK</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice2.jpg" alt="product img" />
-                                <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice3.jpg" alt="product img" />
-                                <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/thumbnail-4.jpg" alt="product img" />
-                                <h4>THE COMPLETE CRUNCHY COOKIES</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product2.jpg" alt="product img" />
-                                <h4>Plant-Based Protein</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product juice4.jpg" alt="product img" />
-                                <h4>AQUAHYDRATE 4X1 GALLON</h4>
-                                <button>Read More</button>
-                            </div>
-                            <div class="about-add-info">
-                                <img src="../assets/image/product3.jpg" alt="product img" />
-                                <h4>NATURES PLANT PROTEIN</h4>
-                                <button>Read More</button>
-                            </div>
-                        </div>
-
-
                     </div>
-                </section>
-        </section>
+                    <div class="about-adds">
+                        <div class="about-add-info">
+                            <img src="../assets/image/product1.jpg" alt="product img" />
+                            <h4>MILK THISTLE</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice6.jpg" alt="product img" />
+                            <h4>MIRACLE REDS</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice1.jpg" alt="product img" />
+                            <h4>BIO STEEL SPORTS DRINK</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice2.jpg" alt="product img" />
+                            <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice3.jpg" alt="product img" />
+                            <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/thumbnail-4.jpg" alt="product img" />
+                            <h4>THE COMPLETE CRUNCHY COOKIES</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product2.jpg" alt="product img" />
+                            <h4>Plant-Based Protein</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product juice4.jpg" alt="product img" />
+                            <h4>AQUAHYDRATE 4X1 GALLON</h4>
+                            <button>Read More</button>
+                        </div>
+                        <div class="about-add-info">
+                            <img src="../assets/image/product3.jpg" alt="product img" />
+                            <h4>NATURES PLANT PROTEIN</h4>
+                            <button>Read More</button>
+                        </div>
+                    </div>
 
-        <!--footer area-->
-        <footer>
-            <div class="foot-area">
-                <div class="foot-info-1">
-                    <h3>Your Healthy Choice Vending LLC</h3>
-                    <img src="../assets/image/logo.jpg" />
-                    <div><button>Shop Online</button></div>
+
                 </div>
-                <div class="foot-info-2">
-                    <h3>Follow Us</h3>
-                    <span class="icons"><i class="fa-brands fa-facebook"></i>
+            </section>
+    </section>
+    <div id="toTop" class="to-top">
+        <a href="#top">&#8963;</a>
+    </div>
+    <!--footer area-->
+    <footer>
+        <div class="foot-area">
+            <div class="foot-info-1">
+                <h3>Your Healthy Choice Vending LLC</h3>
+                <img src="../assets/image/logo.jpg" />
+                <div><button>Shop Online</button></div>
+            </div>
+            <div class="foot-info-2">
+                <h3>Follow Us</h3>
+                <span class="icons"><i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-whatsapp"></i>
@@ -152,21 +155,21 @@
                     <i class="fa-solid fa-phone-flip"></i>
                 </span>
 
-                    <p>Follow Us Owned and operated by US Veteran</p>
+                <p>Follow Us Owned and operated by US Veteran</p>
 
-                </div>
-                <div class="foot-info-3">
-                    <h3>Our Vision</h3>
-                    <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world
-                        through nutritious food and healthy drinks.</p>
-                </div>
             </div>
-            <hr>
-            <div class="foot-bottom">
-                <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+            <div class="foot-info-3">
+                <h3>Our Vision</h3>
+                <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world through
+                    nutritious food and healthy drinks.</p>
             </div>
-        </footer>
-        <script src="./js/main.js"></script>
+        </div>
+        <hr>
+        <div class="foot-bottom">
+            <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+        </div>
+    </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
