responsice css to all pages

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="./Login.html">Login</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
+            <span class="menu-bars"><i class="fas fa-bars"></i></span>
             <div class="cart-area">
                 <p><i class="fa-solid fa-bag-shopping"></i> $0.00</p>
             </div>
